--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "silber/bouncer": "v1.0.0-rc.7"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
