--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "predis/predis": "^1.1",
         "silber/bouncer": "v1.0.0-rc.7"
     },
     "require-dev": {
