--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^7.2",
         "caouecs/laravel-lang": "~5.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
