--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
-        "silber/bouncer": "v1.0.0-rc.7"
+        "silber/bouncer": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
