--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "brexis/laravel-workflow": "^1.3",
         "caouecs/laravel-lang": "~5.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.0",
