--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
         "laravel/telescope": "^3.2",
+        "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
