It's now Coronastone!

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cornerstone/cornerstone",
+    "name": "coronastone/coronastone",
     "type": "project",
     "description": "Scaffold based on the Laravel Framework.",
     "keywords": [
