Support for Social Logins

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 OAUTH_CREATE_USER=false
+
+EXTERNAL_CREATE_USER=false
+EXTERNAL_STATELESS_REDIRECT=urn:ietf:wg:oauth:2.0:oob
